--- a/fr/a-propos-de-lexperience/index.htm
+++ b/fr/a-propos-de-lexperience/index.htm
@@ -5111,7 +5111,7 @@
                   "meta": {
                     "type": "home.HomePage",
                     "detail_url": "https://cms.heinekenexperience.com/api/v1/pages/61/",
-                    "html_url": "https://cms.heinekenexperience.com/fr/"
+                    "html_url": "/fr/index.htm"
                   },
                   "title": "heinekenexperience.com"
                 },
@@ -5119,56 +5119,56 @@
                   {
                     "language": { "code": "fr", "name": "Français" },
                     "page": {
-                      "url": "/fr/a-propos-de-lexperience/",
+                      "url": "/fr/a-propos-de-lexperience/index.htm",
                       "title": "À propos de l’expérience"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Anglais" },
                     "page": {
-                      "url": "/en/about-the-experience/",
+                      "url": "/en/about-the-experience/index.htm",
                       "title": "About the Experience"
                     }
                   },
                   {
                     "language": { "code": "nl", "name": "Hollandais" },
                     "page": {
-                      "url": "/nl/over-de-experience/",
+                      "url": "/nl/over-de-experience/index.htm",
                       "title": "Over de Experience"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Allemand" },
                     "page": {
-                      "url": "/de/uber-die-experience/",
+                      "url": "/de/uber-die-experience/index.htm",
                       "title": "Über die Experience"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Espagnol" },
                     "page": {
-                      "url": "/es/informacion-sobre-la-experiencia/",
+                      "url": "/es/informacion-sobre-la-experiencia/index.htm",
                       "title": "Información sobre la experiencia"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italien" },
                     "page": {
-                      "url": "/it/informazioni-sullesperienza/",
+                      "url": "/it/informazioni-sullesperienza/index.htm",
                       "title": "Informazioni sull’esperienza"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portugais" },
                     "page": {
-                      "url": "/pt/sobre-a-experiencia/",
+                      "url": "/pt/sobre-a-experiencia/index.htm",
                       "title": "Sobre a Experiência"
                     }
                   }
                 ],
                 "show_info_bar": true,
                 "info_bar_message": "Discover our new Heineken® Flagship Cruise",
-                "info_bar_url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/",
+                "info_bar_url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/index.htm",
                 "info_bar_schedule": {
                   "sunday": {
                     "open": "10:30",
@@ -5250,7 +5250,7 @@
                     "cta_target_anchor": "",
                     "show_scrollarrow": true,
                     "show_ticketbar": false,
-                    "cta_page_url": "/fr/checkout/",
+                    "cta_page_url": "/fr/checkout/index.htm",
                     "usps_title": null,
                     "usps": null,
                     "cta_anchor": "hero_block"
@@ -5453,7 +5453,7 @@
                         "question": "Which languages does the Heineken Experience offer?"
                       }
                     ],
-                    "cta_page_url": "/en/faqs/"
+                    "cta_page_url": "/fr/foire-aux-questions/index.htm"
                   },
                   "id": "b623c887-fc2e-4595-835a-00f204afba5e"
                 }
@@ -5466,125 +5466,125 @@
             "menu": [
               {
                 "title": "Découvrir nos visites",
-                "url": "/fr/decouvrir-nos-visites/",
+                "url": "/fr/decouvrir-nos-visites/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/fr/decouvrir-nos-visites/rock-the-city/",
+                    "url": "/fr/decouvrir-nos-visites/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/fr/decouvrir-nos-visites/vip-tour/",
+                    "url": "/fr/decouvrir-nos-visites/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/",
+                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Événements \u0026 réunions",
-                "url": "/fr/evenements-et-reunions/",
+                "url": "/fr/evenements-et-reunions/index.htm",
                 "children": [
                   {
                     "title": "Découvrir nos espaces",
-                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/"
+                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm"
                   },
                   {
                     "title": "Nos services",
-                    "url": "/fr/evenements-et-reunions/nos-services/"
+                    "url": "/fr/evenements-et-reunions/nos-services/index.htm"
                   },
                   {
                     "title": "Entrer en contact",
-                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/"
+                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/index.htm"
                   }
                 ]
               },
               {
                 "title": "Service et contact",
-                "url": "/fr/service-et-contact/"
+                "url": "/fr/service-et-contact/index.htm"
               },
-              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/" },
+              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/fr/heineken-store-fr/"
+                "url": "/fr/heineken-store-fr/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "À propos de l’expérience",
-                  "url": "/fr/a-propos-de-lexperience/",
+                  "url": "/fr/a-propos-de-lexperience/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos visites",
-                  "url": "/fr/decouvrir-nos-visites/",
+                  "url": "/fr/decouvrir-nos-visites/index.htm",
                   "new": false
                 },
                 {
                   "title": "Service et contact",
-                  "url": "/fr/service-et-contact/",
+                  "url": "/fr/service-et-contact/index.htm",
                   "new": false
                 },
                 {
                   "title": "Enfants et mineurs",
-                  "url": "/fr/enfants-et-mineurs/",
+                  "url": "/fr/enfants-et-mineurs/index.htm",
                   "new": false
                 },
                 {
                   "title": "Changement de date et remboursement",
-                  "url": "/fr/changement-de-date-et-remboursement/",
+                  "url": "/fr/changement-de-date-et-remboursement/index.htm",
                   "new": false
                 },
                 {
                   "title": "Carte cadeau",
-                  "url": "/fr/carte-cadeau/",
+                  "url": "/fr/carte-cadeau/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/fr/heineken-store-fr/",
+                  "url": "/fr/heineken-store-fr/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Événements \u0026 réunions",
-                  "url": "/fr/evenements-et-reunions/",
+                  "url": "/fr/evenements-et-reunions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos espaces",
-                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/",
+                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm",
                   "new": false
                 },
                 {
                   "title": "Nos services",
-                  "url": "/fr/evenements-et-reunions/nos-services/",
+                  "url": "/fr/evenements-et-reunions/nos-services/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 }
               ],
@@ -5596,27 +5596,27 @@
                 },
                 {
                   "title": "Politique de confidentialité",
-                  "url": "/fr/politique-de-confidentialite/",
+                  "url": "/fr/politique-de-confidentialite/index.htm",
                   "new": false
                 },
                 {
                   "title": "Politique en matière de cookies",
-                  "url": "/fr/politique-en-matiere-de-cookies/",
+                  "url": "/fr/politique-en-matiere-de-cookies/index.htm",
                   "new": false
                 },
                 {
                   "title": "Conditions générales",
-                  "url": "/fr/conditions-generales/",
+                  "url": "/fr/conditions-generales/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/fr/house-rules-fr/",
+                  "url": "/fr/house-rules-fr/index.htm",
                   "new": false
                 }
               ],
