--- a/fr/carte-cadeau/index.htm
+++ b/fr/carte-cadeau/index.htm
@@ -2380,7 +2380,7 @@
                       target="_blank"
                       class="Button_root__7YWUn"
                       rel="noreferrer"
-                      href="https://tickets.heinekenexperience.com/fr/tickets/giftcard"
+                      href="/fr/checkout/index.htm"
                       >Obtenir votre carte cadeau</a
                     >
                   </div>
@@ -2754,7 +2754,7 @@
                       z-index: 2;
                     }</style
                   ><a
-                    href="https://tickets.heinekenexperience.com/fr/tickets/giftcard"
+                    href="/fr/checkout/index.htm"
                     data-gtm="button"
                     class="css-j79e8m"
                     ><span>Obtenir votre carte cadeau</span></a
@@ -4652,43 +4652,43 @@
                   {
                     "language": { "code": "fr", "name": "Français" },
                     "page": {
-                      "url": "/fr/carte-cadeau/",
+                      "url": "/fr/carte-cadeau/index.htm",
                       "title": "Carte cadeau"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Anglais" },
-                    "page": { "url": "/en/gift-card/", "title": "Gift card" }
+                    "page": { "url": "/en/gift-card/index.htm", "title": "Gift card" }
                   },
                   {
                     "language": { "code": "nl", "name": "Hollandais" },
-                    "page": { "url": "/nl/cadeaubon/", "title": "Cadeaubon" }
+                    "page": { "url": "/nl/cadeaubon/index.htm", "title": "Cadeaubon" }
                   },
                   {
                     "language": { "code": "de", "name": "Allemand" },
                     "page": {
-                      "url": "/de/geschenkgutschein/",
+                      "url": "/de/geschenkgutschein/index.htm",
                       "title": "Geschenkgutschein"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Espagnol" },
                     "page": {
-                      "url": "/es/tarjeta-regalo/",
+                      "url": "/es/tarjeta-regalo/index.htm",
                       "title": "Tarjeta regalo"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italien" },
                     "page": {
-                      "url": "/it/buono-regalo/",
+                      "url": "/it/buono-regalo/index.htm",
                       "title": "Buono regalo"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portugais" },
                     "page": {
-                      "url": "/pt/cart%C3%A3o-de-oferta/",
+                      "url": "/pt/cart%C3%A3o-de-oferta/index.htm",
                       "title": "Cartão de oferta"
                     }
                   }
@@ -4783,7 +4783,7 @@
                       }
                     },
                     "video": null,
-                    "cta_url": "https://tickets.heinekenexperience.com/fr/tickets/giftcard",
+                    "cta_url": "/fr/checkout/index.htm",
                     "cta_label": "Obtenir votre carte cadeau",
                     "cta_target_anchor": "",
                     "show_scrollarrow": true,
@@ -4801,7 +4801,7 @@
                     "title": "Une surprise qui fait mousse",
                     "text": "\u003cp data-block-key=\"odad5\"\u003eQu’elle que soit l’occasion, pour un anniversaire, une célébration ou une fête en famille, faites une surprise à vos proches et offrez-leur une visite de la Maison Heineken® grâce à la carte cadeau Heineken Experience.\u003c/p\u003e\u003cp data-block-key=\"vjboz\"\u003eLa carte cadeau Heineken Experience vous permet de choisir parmi nos différentes visites. Une fois votre achat effectué, vous recevrez un bon cadeau unique, que vous pourrez offrir à la personne de votre choix. La personne qui recevra le cadeau aura la possibilité de choisir la date et l’heure qui lui conviennent le mieux. Une fois que le bon cadeau aura été échangé contre des tickets, il.elle sera paré.e pour découvrir l’histoire de la plus célèbre bière du monde !\u003c/p\u003e",
                     "layout": "horizontal",
-                    "cta_url": "https://tickets.heinekenexperience.com/fr/tickets/giftcard",
+                    "cta_url": "/fr/checkout/index.htm",
                     "cta_label": "Obtenir votre carte cadeau",
                     "cta_anchor": "text",
                     "cta_page_url": null
@@ -4910,7 +4910,7 @@
                     "sub_title": "Vous aurez besoin du code sur le bon cadeau",
                     "primary_button_label": "Échanger votre carte cadeau",
                     "primary_button_url": null,
-                    "external_url": "https://tickets.heinekenexperience.com/voucher/fr",
+                    "external_url": "/fr/time/index.html",
                     "background_image": {
                       "id": 548,
                       "title": "Valentines_Card6.jpg",
@@ -4962,7 +4962,7 @@
                         "answer": "\u003cp\u003eThe Heineken Experience gift card is valid for 2 years since it was purchased.\u003c/p\u003e"
                       }
                     ],
-                    "cta_page_url": "/fr/foire-aux-questions/"
+                    "cta_page_url": "/fr/foire-aux-questions/index.htm"
                   },
                   "id": "35903f46-e5b9-41aa-8f08-15c0f2150d65"
                 }
@@ -4975,125 +4975,125 @@
             "menu": [
               {
                 "title": "Découvrir nos visites",
-                "url": "/fr/decouvrir-nos-visites/",
+                "url": "/fr/decouvrir-nos-visites/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/fr/decouvrir-nos-visites/rock-the-city/",
+                    "url": "/fr/decouvrir-nos-visites/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/fr/decouvrir-nos-visites/vip-tour/",
+                    "url": "/fr/decouvrir-nos-visites/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/",
+                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Événements \u0026 réunions",
-                "url": "/fr/evenements-et-reunions/",
+                "url": "/fr/evenements-et-reunions/index.htm",
                 "children": [
                   {
                     "title": "Découvrir nos espaces",
-                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/"
+                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm"
                   },
                   {
                     "title": "Nos services",
-                    "url": "/fr/evenements-et-reunions/nos-services/"
+                    "url": "/fr/evenements-et-reunions/nos-services/index.htm"
                   },
                   {
                     "title": "Entrer en contact",
-                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/"
+                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/index.htm"
                   }
                 ]
               },
               {
                 "title": "Service et contact",
-                "url": "/fr/service-et-contact/"
+                "url": "/fr/service-et-contact/index.htm"
               },
-              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/" },
+              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/fr/heineken-store-fr/"
+                "url": "/fr/heineken-store-fr/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "À propos de l’expérience",
-                  "url": "/fr/a-propos-de-lexperience/",
+                  "url": "/fr/a-propos-de-lexperience/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos visites",
-                  "url": "/fr/decouvrir-nos-visites/",
+                  "url": "/fr/decouvrir-nos-visites/index.htm",
                   "new": false
                 },
                 {
                   "title": "Service et contact",
-                  "url": "/fr/service-et-contact/",
+                  "url": "/fr/service-et-contact/index.htm",
                   "new": false
                 },
                 {
                   "title": "Enfants et mineurs",
-                  "url": "/fr/enfants-et-mineurs/",
+                  "url": "/fr/enfants-et-mineurs/index.htm",
                   "new": false
                 },
                 {
                   "title": "Changement de date et remboursement",
-                  "url": "/fr/changement-de-date-et-remboursement/",
+                  "url": "/fr/changement-de-date-et-remboursement/index.htm",
                   "new": false
                 },
                 {
                   "title": "Carte cadeau",
-                  "url": "/fr/carte-cadeau/",
+                  "url": "/fr/carte-cadeau/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/fr/heineken-store-fr/",
+                  "url": "/fr/heineken-store-fr/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Événements \u0026 réunions",
-                  "url": "/fr/evenements-et-reunions/",
+                  "url": "/fr/evenements-et-reunions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos espaces",
-                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/",
+                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm",
                   "new": false
                 },
                 {
                   "title": "Nos services",
-                  "url": "/fr/evenements-et-reunions/nos-services/",
+                  "url": "/fr/evenements-et-reunions/nos-services/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 }
               ],
@@ -5105,27 +5105,27 @@
                 },
                 {
                   "title": "Politique de confidentialité",
-                  "url": "/fr/politique-de-confidentialite/",
+                  "url": "/fr/politique-de-confidentialite/index.htm",
                   "new": false
                 },
                 {
                   "title": "Politique en matière de cookies",
-                  "url": "/fr/politique-en-matiere-de-cookies/",
+                  "url": "/fr/politique-en-matiere-de-cookies/index.htm",
                   "new": false
                 },
                 {
                   "title": "Conditions générales",
-                  "url": "/fr/conditions-generales/",
+                  "url": "/fr/conditions-generales/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/fr/house-rules-fr/",
+                  "url": "/fr/house-rules-fr/index.htm",
                   "new": false
                 }
               ],
