--- a/fr/checkout/index.htm
+++ b/fr/checkout/index.htm
@@ -1735,7 +1735,7 @@
         <div class="SiteFooter_content__TkTjR">
           <div class="SiteWrapper_root__wSMeN">
             <div class="SiteFooter_inner__3KsA7">
-              <a href="/fr/"
+              <a href="/fr/index.htm"
                 ><img
                   alt="Heineken logo"
                   loading="lazy"
@@ -1752,26 +1752,26 @@
                   <h5>Événements &amp; réunions</h5>
                   <ul class="SiteFooter_list__mmeyY">
                     <li class="SiteFooter_navItem__Xp9E4">
-                      <a data-gtm="link" href="/fr/evenements-et-reunions/"
+                      <a data-gtm="link" href="/fr/evenements-et-reunions/index.htm"
                         >Événements &amp; réunions</a
                       >
                     </li>
                     <li class="SiteFooter_navItem__Xp9E4">
                       <a
                         data-gtm="link"
-                        href="/fr/evenements-et-reunions/decouvrir-nos-espaces/"
+                        href="/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm"
                         >Découvrir nos espaces</a
                       >
                     </li>
                     <li class="SiteFooter_navItem__Xp9E4">
                       <a
                         data-gtm="link"
-                        href="/fr/evenements-et-reunions/nos-services/"
+                        href="/fr/evenements-et-reunions/nos-services/index.htm"
                         >Nos services</a
                       >
                     </li>
                     <li class="SiteFooter_navItem__Xp9E4">
-                      <a data-gtm="link" href="/fr/foire-aux-questions/"
+                      <a data-gtm="link" href="/fr/foire-aux-questions/index.htm"
                         >Foire aux questions</a
                       >
                     </li>
@@ -1804,27 +1804,27 @@
                   >
                 </li>
                 <li class="SiteFooter_navItem__Xp9E4">
-                  <a data-gtm="link" href="/fr/politique-de-confidentialite/"
+                  <a data-gtm="link" href="/fr/politique-de-confidentialite/index.htm"
                     >Politique de confidentialité</a
                   >
                 </li>
                 <li class="SiteFooter_navItem__Xp9E4">
-                  <a data-gtm="link" href="/fr/politique-en-matiere-de-cookies/"
+                  <a data-gtm="link" href="/fr/politique-en-matiere-de-cookies/index.htm"
                     >Politique en matière de cookies</a
                   >
                 </li>
                 <li class="SiteFooter_navItem__Xp9E4">
-                  <a data-gtm="link" href="/fr/conditions-generales/"
+                  <a data-gtm="link" href="/fr/conditions-generales/index.htm"
                     >Conditions générales</a
                   >
                 </li>
                 <li class="SiteFooter_navItem__Xp9E4">
-                  <a data-gtm="link" href="/fr/foire-aux-questions/"
+                  <a data-gtm="link" href="/fr/foire-aux-questions/index.htm"
                     >Foire aux questions</a
                   >
                 </li>
                 <li class="SiteFooter_navItem__Xp9E4">
-                  <a data-gtm="link" href="/fr/house-rules-fr/"
+                  <a data-gtm="link" href="/fr/house-rules-fr/index.htm"
                     >Heineken Experience Visitor House Rules</a
                   >
                 </li>
