--- a/fr/email/index.htm
+++ b/fr/email/index.htm
@@ -344,7 +344,7 @@
         <div class="wrap">
           <div class="footer-table">
             <div class="cell" id="footer-logo">
-              <a href="#"
+              <a href="/fr/index.htm"
                 ><img
                   src="/static_new/images/logo-footer.svg"
                   alt="Heineken Experience"
@@ -354,7 +354,7 @@
               <nav>
                 <ul>
                   <li>
-                    <a href="https://www.heinekenexperience.com/en/faqs/"
+                    <a href="/fr/foire-aux-questions/index.htm"
                       >FAQ</a
                     >
                   </li>
@@ -363,7 +363,7 @@
                                 <li><a href="/pt/discover-our-tours/">Discover our tours</a></li>-->
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/service-and-contact/"
+                      href="/fr/service-et-contact/index.htm"
                       >Service &amp; Contact</a
                     >
                   </li>
@@ -374,26 +374,26 @@
                   <!--<li><a href="/pt/privacy-policy/">Cookie Settings</a></li>-->
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/privacy-policy/"
+                      href="/fr/politique-de-confidentialite/index.htm"
                       >Privacy Policy</a
                     >
                   </li>
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/cookie-policy/"
+                      href="/fr/a-propos-de-lexperience/index.htm"
                       >Cookie Policy</a
                     >
                   </li>
                   <li>
                     <a
-                      href="https://www.heinekenexperience.com/en/terms-and-conditions/"
+                      href="/fr/changement-de-date-et-remboursement/index.htm"
                       target="_blank"
                       rel="noopener noreferrer"
                       >Terms &amp; Conditions</a
                     >
                   </li>
                   <li>
-                    <a href="https://www.theheinekencompany.com"
+                    <a href="#"
                       >Heineken Company</a
                     >
                   </li>
