--- a/fr/changement-de-date-et-remboursement/index.htm
+++ b/fr/changement-de-date-et-remboursement/index.htm
@@ -2373,7 +2373,7 @@
                       target="_blank"
                       class="Button_root__7YWUn"
                       rel="noreferrer"
-                      href="https://tickets.heinekenexperience.com/en/self-service/date"
+                      href="/fr/checkout/index.htm"
                       >Modifier la date de votre visite</a
                     >
                   </div>
@@ -4433,7 +4433,7 @@
           <div class="SiteFooter_content__TkTjR">
             <div class="SiteWrapper_root__wSMeN">
               <div class="SiteFooter_inner__3KsA7">
-                <a href="../index.htm"
+                <a href="/fr/index.htm"
                   ><img
                     alt="Heineken logo"
                     loading="lazy"
@@ -4686,7 +4686,7 @@
                   "meta": {
                     "type": "home.HomePage",
                     "detail_url": "https://cms.heinekenexperience.com/api/v1/pages/61/",
-                    "html_url": "https://cms.heinekenexperience.com/fr/"
+                    "html_url": "/fr/index.htm"
                   },
                   "title": "heinekenexperience.com"
                 },
@@ -4694,49 +4694,49 @@
                   {
                     "language": { "code": "fr", "name": "Français" },
                     "page": {
-                      "url": "/fr/changement-de-date-et-remboursement/",
+                      "url": "/fr/changement-de-date-et-remboursement/index.htm",
                       "title": "Changement de date et remboursement"
                     }
                   },
                   {
                     "language": { "code": "en", "name": "Anglais" },
                     "page": {
-                      "url": "/en/rescheduling-and-refund/",
+                      "url": "/en/rescheduling-and-refund/index.htm",
                       "title": "Rescheduling and refund"
                     }
                   },
                   {
                     "language": { "code": "nl", "name": "Hollandais" },
                     "page": {
-                      "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/",
+                      "url": "/nl/bezoek-verplaatsen-en-terugbetalingen/index.htm",
                       "title": "Bezoek verplaatsen en terugbetalingen"
                     }
                   },
                   {
                     "language": { "code": "de", "name": "Allemand" },
                     "page": {
-                      "url": "/de/verschieben-oder-r%C3%BCckerstatten/",
+                      "url": "/de/verschieben-oder-r%C3%BCckerstatten/index.htm",
                       "title": "Verschieben oder rückerstatten"
                     }
                   },
                   {
                     "language": { "code": "es", "name": "Espagnol" },
                     "page": {
-                      "url": "/es/cambio-de-fecha-hora-y-reembolso/",
+                      "url": "/es/cambio-de-fecha-hora-y-reembolso/index.htm",
                       "title": "Cambio de fecha/hora y reembolso"
                     }
                   },
                   {
                     "language": { "code": "it", "name": "Italien" },
                     "page": {
-                      "url": "/it/rinvio-della-visita-e-rimborsi/",
+                      "url": "/it/rinvio-della-visita-e-rimborsi/index.htm",
                       "title": "Rinvio della visita e rimborsi"
                     }
                   },
                   {
                     "language": { "code": "pt", "name": "Portugais" },
                     "page": {
-                      "url": "/pt/reagendamento-e-reembolso/",
+                      "url": "/pt/reagendamento-e-reembolso/index.htm",
                       "title": "Reagendamento e reembolso"
                     }
                   }
@@ -4820,7 +4820,7 @@
                     },
                     "image_mobile": {},
                     "video": null,
-                    "cta_url": "https://tickets.heinekenexperience.com/en/self-service/date",
+                    "cta_url": "/fr/checkout/index.htm",
                     "cta_label": "Modifier la date de votre visite",
                     "cta_target_anchor": "",
                     "show_scrollarrow": true,
@@ -4940,7 +4940,7 @@
                       {
                         "question": "Can I change the date and/or start time of my Heineken® Tour?",
                         "slug": "reschedule",
-                        "answer": "\u003cp data-block-key=\"yusmh\"\u003eYes, up until an hour prior to the start of your visit you can do this via this link https://tickets.heinekenexperience.com/en/self-service . You can reschedule your Heineken® Tour tickets purchased on the Heineken Experience website by entering your ticket number (starting with 77) and your corresponding email address. After sending your request, you will receive an email with a link to choose a new date/time.\u003c/p\u003e\u003cp data-block-key=\"9uh58\"\u003e\u003c/p\u003e\u003cp data-block-key=\"aueua\"\u003eIf it\u0026#x27;s less than an hour before the start of your visit? Please send an email to service.experience@globalticket.com\u003c/p\u003e"
+                        "answer": "\u003cp data-block-key=\"yusmh\"\u003eYes, up until an hour prior to the start of your visit you can do this via this link /fr/checkout/index.htm . You can reschedule your Heineken® Tour tickets purchased on the Heineken Experience website by entering your ticket number (starting with 77) and your corresponding email address. After sending your request, you will receive an email with a link to choose a new date/time.\u003c/p\u003e\u003cp data-block-key=\"9uh58\"\u003e\u003c/p\u003e\u003cp data-block-key=\"aueua\"\u003eIf it\u0026#x27;s less than an hour before the start of your visit? Please send an email to service.experience@globalticket.com\u003c/p\u003e"
                       },
                       {
                         "question": "Until when can I change the date and/or start time of my tour?",
@@ -4963,7 +4963,7 @@
                         "answer": "\u003cp data-block-key=\"7ei35\"\u003e\u003c/p\u003e\u003cp data-block-key=\"hdsjy\"\u003eYes, you can by sending an email to service.experience@globalticket.com. Please note that for The Perfect Match Tour and the Live Your Music Tour we can only change the date and/or time of your tickets to the Heineken Experience.\u003c/p\u003e\u003cp data-block-key=\"9ey0w\"\u003eTo change the date and/or time of your tickets for the Johan Cruijff ArenA (The Perfect Match), please reach out to our colleagues there: tour@johancruijffarena.nl\u003c/p\u003e"
                       }
                     ],
-                    "cta_page_url": "/fr/foire-aux-questions/"
+                    "cta_page_url": "/fr/foire-aux-questions/index.htm"
                   },
                   "id": "0fea100a-304e-45ca-aa74-3ae2305f46ee"
                 }
@@ -4976,125 +4976,125 @@
             "menu": [
               {
                 "title": "Découvrir nos visites",
-                "url": "/fr/decouvrir-nos-visites/",
+                "url": "/fr/decouvrir-nos-visites/index.htm",
                 "children": [
                   {
                     "title": "Heineken® Tour + Rooftop",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour-rooftop-fr/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Tour",
-                    "url": "/fr/decouvrir-nos-visites/heineken-tour/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "Heineken® Flagship Cruise",
-                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/",
+                    "url": "/fr/decouvrir-nos-visites/heineken-flagship-cruise-fr/index.htm",
                     "new": true
                   },
                   {
                     "title": "Rock the City",
-                    "url": "/fr/decouvrir-nos-visites/rock-the-city/",
+                    "url": "/fr/decouvrir-nos-visites/rock-the-city/index.htm",
                     "new": false
                   },
                   {
                     "title": "VIP Tour",
-                    "url": "/fr/decouvrir-nos-visites/vip-tour/",
+                    "url": "/fr/decouvrir-nos-visites/vip-tour/index.htm",
                     "new": false
                   },
                   {
                     "title": "The Perfect Match",
-                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/",
+                    "url": "/fr/decouvrir-nos-visites/the-perfect-match/index.htm",
                     "new": false
                   }
                 ]
               },
               {
                 "title": "Événements \u0026 réunions",
-                "url": "/fr/evenements-et-reunions/",
+                "url": "/fr/evenements-et-reunions/index.htm",
                 "children": [
                   {
                     "title": "Découvrir nos espaces",
-                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/"
+                    "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm"
                   },
                   {
                     "title": "Nos services",
-                    "url": "/fr/evenements-et-reunions/nos-services/"
+                    "url": "/fr/evenements-et-reunions/nos-services/index.htm"
                   },
                   {
                     "title": "Entrer en contact",
-                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/"
+                    "url": "/fr/evenements-et-reunions/entrer-en-contact-/index.htm"
                   }
                 ]
               },
               {
                 "title": "Service et contact",
-                "url": "/fr/service-et-contact/"
+                "url": "/fr/service-et-contact/index.htm"
               },
-              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/" },
+              { "title": "Carte cadeau", "url": "/fr/carte-cadeau/index.htm" },
               {
                 "title": "Heineken® Flagship Store",
-                "url": "/fr/heineken-store-fr/"
+                "url": "/fr/heineken-store-fr/index.htm"
               }
             ],
             "footer": {
               "main": [
                 {
                   "title": "À propos de l’expérience",
-                  "url": "/fr/a-propos-de-lexperience/",
+                  "url": "/fr/a-propos-de-lexperience/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos visites",
-                  "url": "/fr/decouvrir-nos-visites/",
+                  "url": "/fr/decouvrir-nos-visites/index.htm",
                   "new": false
                 },
                 {
                   "title": "Service et contact",
-                  "url": "/fr/service-et-contact/",
+                  "url": "/fr/service-et-contact/index.htm",
                   "new": false
                 },
                 {
                   "title": "Enfants et mineurs",
-                  "url": "/fr/enfants-et-mineurs/",
+                  "url": "/fr/enfants-et-mineurs/index.htm",
                   "new": false
                 },
                 {
                   "title": "Changement de date et remboursement",
-                  "url": "/fr/changement-de-date-et-remboursement/",
+                  "url": "/fr/changement-de-date-et-remboursement/index.htm",
                   "new": false
                 },
                 {
                   "title": "Carte cadeau",
-                  "url": "/fr/carte-cadeau/",
+                  "url": "/fr/carte-cadeau/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken® Flagship Store",
-                  "url": "/fr/heineken-store-fr/",
+                  "url": "/fr/heineken-store-fr/index.htm",
                   "new": false
                 }
               ],
               "event": [
                 {
                   "title": "Événements \u0026 réunions",
-                  "url": "/fr/evenements-et-reunions/",
+                  "url": "/fr/evenements-et-reunions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Découvrir nos espaces",
-                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/",
+                  "url": "/fr/evenements-et-reunions/decouvrir-nos-espaces/index.htm",
                   "new": false
                 },
                 {
                   "title": "Nos services",
-                  "url": "/fr/evenements-et-reunions/nos-services/",
+                  "url": "/fr/evenements-et-reunions/nos-services/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 }
               ],
@@ -5106,27 +5106,27 @@
                 },
                 {
                   "title": "Politique de confidentialité",
-                  "url": "/fr/politique-de-confidentialite/",
+                  "url": "/fr/politique-de-confidentialite/index.htm",
                   "new": false
                 },
                 {
                   "title": "Politique en matière de cookies",
-                  "url": "/fr/politique-en-matiere-de-cookies/",
+                  "url": "/fr/politique-en-matiere-de-cookies/index.htm",
                   "new": false
                 },
                 {
                   "title": "Conditions générales",
-                  "url": "/fr/conditions-generales/",
+                  "url": "/fr/conditions-generales/index.htm",
                   "new": false
                 },
                 {
                   "title": "Foire aux questions",
-                  "url": "/fr/foire-aux-questions/",
+                  "url": "/fr/foire-aux-questions/index.htm",
                   "new": false
                 },
                 {
                   "title": "Heineken Experience Visitor House Rules",
-                  "url": "/fr/house-rules-fr/",
+                  "url": "/fr/house-rules-fr/index.htm",
                   "new": false
                 }
               ],
@@ -5135,7 +5135,7 @@
             },
             "booking_settings": { "booking_window": 151 },
             "checkout_page": {
-              "url": "/fr/checkout/",
+              "url": "/fr/checkout/index.htm",
               "menu_button_text": "Achat de billets"
             },
             "languages": [
